# ChangeLog for mail-filter/libdkim
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  04 Feb 2010; A. Vinogradov <spamslepnoga@inbox.ru> +libdkim-1.0.19.ebuild,
  +files/libdkim-extra-options.patch, +files/libdkim-gentoo.patch:
  recommmit on sunrise #262919
