@@ -1,6 +1,6 @@
 AUX libdkim-extra-options.patch 2614 RMD160 e17fc80897d3918b306b63761b2b59296f71c8ba SHA1 42fe6b1ff66fad250abdd5c9ae0d57a91eff00b0 SHA256 4cc9eed6273fab56b29aede8235ead9a9441e9b2d0309a08e412d79ff9bfdc9f
 AUX libdkim-gentoo.patch 3172 RMD160 cad99f5e7ba6b607376d1836c1d961c3d7b869bf SHA1 3777a5d105a755e3bde9723e79dcaeb2a435c91f SHA256 6e456e58b8c6ea30330508e72b5a1e01260839d05dc7008f397297e75407ac30
 DIST libdkim-1.0.19.zip 55566 RMD160 33ef76ccfb7ef1cb682e2abdf1423beecf8bf180 SHA1 8704ea1b62d7dd61c4d8e96e03a7f05aa34fe675 SHA256 1935c88ea3d053ec2039114d900ac9eb5962adee10e0ec163777dfa5f3bd4eed
-EBUILD libdkim-1.0.19.ebuild 779 RMD160 fe58d1a54fae315dd96772df5bf8e6172d38ebba SHA1 0198b332a906183adec8694269168a0a893a9ec6 SHA256 77cbf9a3e364260c8bc96380834512dcac3b15ca8a23ff690e61d5dd24dc3607
-MISC ChangeLog 296 RMD160 ae8095bdf5b418308903297ae274c14de5e1547e SHA1 fe3f6f9b6edfa1fffd76a00f5c90def49271fdc3 SHA256 1daf80bc36a64cd0fb11ad071105841d7fa8ea1700ac095e5eb520a3cec90792
+EBUILD libdkim-1.0.19.ebuild 825 RMD160 38f2ec973c1b429d9ed16c27d53a44194d8ac9ea SHA1 b0c2bc741bb0094def109ce43cdc097d2ec6a304 SHA256 17e07eb326c459cfd7932d7c763f974103bd188325724e5599f757a27b5b84cc
+MISC ChangeLog 373 RMD160 ad60e9fba288cb5b60e09a4785bfba5fe0fa7c23 SHA1 96597c49deacbc0a2fa48787b84c91d45790029b SHA256 a18963c52fa3012d83dbbe832e24da060f67806b40d875c7846bc037eebe8f04
 MISC metadata.xml 365 RMD160 691018c5ce6e2eb8d9a29c138e5a5fbc0668f323 SHA1 67a86a569a207cf63a2069a93390043436f9f4ff SHA256 d3292c889cc8b28ff8bb1634fcc64079ace9f3dd971358b659a5cd5514af2977
